--- a/style.css
+++ b/style.css
@@ -32,14 +32,13 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
-    width: 1440;
     background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
     background-position: top, bottom;
     background-repeat: no-repeat;
 }
 
 .container {
-    width: 60%;
+    max-width: 1440px;
 }
 
 .heading {
@@ -203,7 +202,13 @@ h5 {
     
     .review {
         margin-right: 0;
+        width: 23rem;
     }
+
+    .rate {
+        width: 23rem;
+    }
+
 }
 
 @media (max-width: 445px) {
